SubBt/force-app/main/default/objects/Issue_Logs__c/Issue_Logs__c.object-meta.xml
<CustomObject>
    <label>Issues</label>
    <nameField>
        <label>Issue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>