SubBt/force-app/main/default/objects/Issue_Logs__c/fields/Aging__c.field-meta.xml
<CustomField>
    <fullName>Aging__c</fullName>
    <formula>IF( NOT(ISPICKVAL(  Status__c , &apos;Open, Working&apos;)) , Today() -  DATEVALUE(CreatedDate), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>