SubBt/force-app/main/default/objects/Issue_Logs__c/fields/Description_of_the_Issue__c.field-meta.xml
<CustomField>
    <fullName>Description_of_the_Issue__c</fullName>
    <label>Description of the Issue</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>