SubBt/force-app/main/default/objects/Issue_Logs__c/fields/Owner_of_the_Issue__c.field-meta.xml
<CustomField>
    <fullName>Owner_of_the_Issue__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Owner of the Issue</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Problems</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>