SubBt/force-app/main/default/objects/Issue_Logs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Project__c</columns>
    <columns>Auto_Number__c</columns>
    <columns>NAME</columns>
    <columns>Description_of_the_Issue__c</columns>
    <columns>Status__c</columns>
    <columns>Severity__c</columns>
    <columns>Resolution__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>